# otel_backend

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  otel-collector-config.yaml  otel_generator.py  pyproject.toml  requirements.txt  test_inference.py
.github/workflows/: build.yaml
inference/: encoder.py  gcn.py  preprocesser.py
otel_backend/: app.py  csv.py  deserializers.py  extract.py  models.py  store.py
otel_backend/ml/: __init__.py  extract.py  gat2.py  gat_net.py  graph_model.py  incremental_graph_trainer.py  model.py  net.py
otlp/: app.py  deserializers.py  models.py
tests/: test_csv.py  test_extract_data.py  test_update_model.py  test_update_model_with_ipv6.py
tests/assets/: unpacked_data.json
