[tool.poetry]
name = "otel-backend"
version = "0.1.0"
description = ""
authors = ["Matthias Osswald <matthias@busykoala.io>"]
readme = "README.md"
packages = [{include = "otel_backend"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
opentelemetry-proto = "^1.21.0"
torch = "^2.2.2"
# torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.2.2%2Bcpu-cp311-cp311-linux_x86_64.whl" }
torch-geometric = "^2.5.2"
ipython = "^8.23.0"
ipdb = "^0.13.13"


[tool.poetry.group.dev.dependencies]
flask = "^3.0.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-exporter-otlp = "^1.21.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
